--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -100,7 +100,7 @@
       auth-domain="dashboard-196e4.firebaseapp.com"
       database-url="https://dashboard-196e4.firebaseio.com"
       storage-bucket="dashboard-196e4.appspot.com"
-      messageing-sender-id="359812903483"
+      messaging-sender-id="359812903483"
     ></firebase-app>
 
     <platinum-sw-register id="sw"
@@ -125,6 +125,7 @@
           <a name="freeareas" href="/freeareas/">Freie Gebiete</a>
           <a name="players" href="/players/">Online Spieler Liste</a>
           <a name="zoneranks" href="/zoneranks/">Zonen Rangliste</a>
+          <a name="notifications" href="/notifications/">Benachrichtigungen</a>
           <span></span>
           <a name="faq" href="/faq/">FAQ</a>
           <span></span>
@@ -147,6 +148,7 @@
           <uwmctools-view-worldstats name="worldstats" route="{{subroute}}"></uwmctools-view-worldstats>
           <uwmctools-view-freeareas name="freeareas"></uwmctools-view-freeareas>
           <uwmctools-view-zoneranks name="zoneranks"></uwmctools-view-zoneranks>
+          <uwmctools-view-notifications name="notifications"></uwmctools-view-notifications>
           <uwmctools-view-404 name="404"></uwmctools-view-404>
       </iron-pages>
     </app-drawer-layout>
