faster loading of search , search working on mobile

--- a/frontend/src/uwmctools-app.html
+++ b/frontend/src/uwmctools-app.html
@@ -112,7 +112,7 @@
                            precache="{{precacheList}}"></platinum-sw-cache>
         <platinum-sw-import-script href="/to-index-fetch-handler.js"></platinum-sw-import-script>
         <platinum-sw-fetch handler="toIndexFetchHandler"
-                     path="/(player|worldstats|plotstats|players|faq|zoneranks|freeareas)(.*)"></platinum-sw-fetch>
+                     path="/(player|worldstats|plotstats|players|faq|zoneranks|freeareas|notifications)(.*)"></platinum-sw-fetch>
     </platinum-sw-register>
 
     <app-drawer-layout fullbleed opened-when-narrow>
