fixed wrong link in uwmctools-location

--- a/frontend/src/uwmctools-location.html
+++ b/frontend/src/uwmctools-location.html
@@ -19,7 +19,7 @@
        <!-- <iron-ajax id="compassreq" url="https://unlimitedworld.de/server_api/dynmap_compass.php?x=[[x]]&z=[[z]]" handle-as="json" on-response="handleResponse" 
         
         ></iron-ajax>-->
-        <a href="https://unlimitedworld.de/server_api/dynmap_compass.php?x=97&z=180" target="_blank">
+        <a href="https://unlimitedworld.de/server_api/dynmap_compass.php?x=[[x]]&z=[[z]]" target="_blank">
         <span>[[x]] / [[z]]</span>
         <paper-tooltip>Klicke auf die Koordinaten um deinen Kompass einzustellen</paper-tooltip>
         </a>
