updated for north-east expansion

--- a/frontend/src/uwmctools-view-worldstats.html
+++ b/frontend/src/uwmctools-view-worldstats.html
@@ -52,6 +52,7 @@
           <paper-tab name="north">Norden</paper-tab>
           <paper-tab name="south">Süden</paper-tab>
           <paper-tab name="east">Osten</paper-tab>
+          <paper-tab name="north-east">Nord-Osten</paper-tab>
         </paper-tabs>
       </app-header>
       <div class="content flexs">
@@ -65,6 +66,7 @@
           <uwmctools-view-worldstats-area-north id="north"></uwmctools-view-worldstats-area-north>
           <uwmctools-view-worldstats-area-south id="south"></uwmctools-view-worldstats-area-south>
           <uwmctools-view-worldstats-area-east id="east"></uwmctools-view-worldstats-area-east>
+          <uwmctools-view-worldstats-area-north-east id="north-east"></uwmctools-view-worldstats-area-north-east>
         </iron-pages>
       </div>
       <uwmctools-footer></uwmctools-footer>
@@ -79,6 +81,7 @@
     tabs.set('north', 'Norden');
     tabs.set('south', 'Süden');
     tabs.set('east', 'Osten');
+    tabs.set('north-east', 'Nord-Osten');
 
     Polymer({
       is: 'uwmctools-view-worldstats',
@@ -99,6 +102,7 @@
             'north': 'area-north',
             'south': 'area-south',
             'east': 'area-east',
+            'north-east': 'area-north-east',
           }
         }
       },
