--- a/frontend/src/uwmctools-view-worldstats-overview.html
+++ b/frontend/src/uwmctools-view-worldstats-overview.html
@@ -22,25 +22,27 @@
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/south" data="{{timeline_south}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/main" data="{{timeline_main}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/full" data="{{timeline_full}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/north-east" data="{{timeline_north_east}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/east/playerzoneAmount" data="{{current_east}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/north/playerzoneAmount" data="{{current_north}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/south/playerzoneAmount" data="{{current_south}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/main/playerzoneAmount" data="{{current_main}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/current/north-east/playerzoneAmount" data="{{current_north_east}}"></firebase-indexeddb-link>
 
     <div class="app-grid">
         <uwmctools-time-chart
-            cols='["Gesamt", "Center", "Süden", "Norden", "Osten"]'
+            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
             timeline="[[zoneAreasAvgSize]]"
             title="Durchschnittliche Zonengröße"
         ></uwmctools-time-chart>
         <uwmctools-time-chart
-            cols='["Gesamt", "Center", "Süden", "Norden", "Osten"]'
+            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
             timeline="[[playerZoneAmounts]]"
             title="Anzahl: Spielerzonen"
         ></uwmctools-time-chart>
         <uwmctools-ratio-chart
             data="[[zoneDistribution]]"
-            labels='["Center", "Süden", "Norden", "Osten"]'
+            labels='["Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
             title="Spielerzonen Verteilung"
         ></uwmctools-ratio-chart>
     </div>
@@ -53,15 +55,15 @@
       properties: {
         zoneDistribution: {
             type: Object,
-            computed: 'computeZoneDistribution(current_main,current_north,current_south,current_east)'
+            computed: 'computeZoneDistribution(current_main,current_north,current_south,current_east,current_north_east)'
         },
         playerZoneAmounts: {
             type: Object,
-            computed: 'computeCombinedTimeline(timeline_full.playerzoneAmount,timeline_main.playerzoneAmount,timeline_north.playerzoneAmount,timeline_south.playerzoneAmount,timeline_east.playerzoneAmount)'
+            computed: 'computeCombinedTimeline(timeline_full.playerzoneAmount,timeline_main.playerzoneAmount,timeline_north.playerzoneAmount,timeline_south.playerzoneAmount,timeline_east.playerzoneAmount,timeline_north_east.playerzoneAmount)'
         },
         zoneAreasAvgSize: {
             type: Object,
-            computed: 'computeCombinedTimeline(zoneAreaAvgSizeFull,zoneAreaAvgSizeCenter,zoneAreaAvgSizeNorth,zoneAreaAvgSizeSouth,zoneAreaAvgSizeEast)'
+            computed: 'computeCombinedTimeline(zoneAreaAvgSizeFull,zoneAreaAvgSizeCenter,zoneAreaAvgSizeNorth,zoneAreaAvgSizeSouth,zoneAreaAvgSizeEast,zoneAreaAvgSizeNorthEast)'
         },
         zoneAreaAvgSizeEast: {
           type: Object,
@@ -74,6 +76,10 @@
         zoneAreaAvgSizeSouth: {
           type: Object,
           computed: 'computeAvgZoneAreaTimeline(timeline_south.playerzoneArea, timeline_south.playerzoneAmount)'
+        },
+        zoneAreaAvgSizeNorthEast: {
+          type: Object,
+          computed: 'computeAvgZoneAreaTimeline(timeline_north_east.playerzoneArea, timeline_north_east.playerzoneAmount)'
         },
         zoneAreaAvgSizeCenter: {
           type: Object,
