--- a/frontend/src/uwmctools-view-worldstats-overview.html
+++ b/frontend/src/uwmctools-view-worldstats-overview.html
@@ -18,12 +18,14 @@
     </style>
 
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/east" data="{{timeline_east}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/timeline/west" data="{{timeline_west}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/north" data="{{timeline_north}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/south" data="{{timeline_south}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/main" data="{{timeline_main}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/full" data="{{timeline_full}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/timeline/north-east" data="{{timeline_north_east}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/east/playerzoneAmount" data="{{current_east}}"></firebase-indexeddb-link>
+    <firebase-indexeddb-link path="uwmctools/stats/world/current/west/playerzoneAmount" data="{{current_west}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/north/playerzoneAmount" data="{{current_north}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/south/playerzoneAmount" data="{{current_south}}"></firebase-indexeddb-link>
     <firebase-indexeddb-link path="uwmctools/stats/world/current/main/playerzoneAmount" data="{{current_main}}"></firebase-indexeddb-link>
@@ -31,18 +33,18 @@
 
     <div class="app-grid">
         <uwmctools-time-chart
-            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
+            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Westen", "Nord-Osten"]'
             timeline="[[zoneAreasAvgSize]]"
             title="Durchschnittliche Zonengröße"
         ></uwmctools-time-chart>
         <uwmctools-time-chart
-            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
+            cols='["Gesamt", "Center", "Süden", "Norden", "Osten", "Westen", "Nord-Osten"]'
             timeline="[[playerZoneAmounts]]"
             title="Anzahl: Spielerzonen"
         ></uwmctools-time-chart>
         <uwmctools-ratio-chart
             data="[[zoneDistribution]]"
-            labels='["Center", "Süden", "Norden", "Osten", "Nord-Osten"]'
+            labels='["Center", "Süden", "Norden", "Osten", "Westen", "Nord-Osten"]'
             title="Spielerzonen Verteilung"
         ></uwmctools-ratio-chart>
     </div>
@@ -55,19 +57,23 @@
       properties: {
         zoneDistribution: {
             type: Object,
-            computed: 'computeZoneDistribution(current_main,current_north,current_south,current_east,current_north_east)'
+            computed: 'computeZoneDistribution(current_main,current_north,current_south,current_east,current_west,current_north_east)'
         },
         playerZoneAmounts: {
             type: Object,
-            computed: 'computeCombinedTimeline(timeline_full.playerzoneAmount,timeline_main.playerzoneAmount,timeline_north.playerzoneAmount,timeline_south.playerzoneAmount,timeline_east.playerzoneAmount,timeline_north_east.playerzoneAmount)'
+            computed: 'computeCombinedTimeline(timeline_full.playerzoneAmount,timeline_main.playerzoneAmount,timeline_north.playerzoneAmount,timeline_south.playerzoneAmount,timeline_east.playerzoneAmount,timeline_west.playerzoneAmount,timeline_north_east.playerzoneAmount)'
         },
         zoneAreasAvgSize: {
             type: Object,
-            computed: 'computeCombinedTimeline(zoneAreaAvgSizeFull,zoneAreaAvgSizeCenter,zoneAreaAvgSizeNorth,zoneAreaAvgSizeSouth,zoneAreaAvgSizeEast,zoneAreaAvgSizeNorthEast)'
+            computed: 'computeCombinedTimeline(zoneAreaAvgSizeFull,zoneAreaAvgSizeCenter,zoneAreaAvgSizeNorth,zoneAreaAvgSizeSouth,zoneAreaAvgSizeEast,zoneAreaAvgSizeWest,zoneAreaAvgSizeNorthEast)'
         },
         zoneAreaAvgSizeEast: {
           type: Object,
           computed: 'computeAvgZoneAreaTimeline(timeline_east.playerzoneArea, timeline_east.playerzoneAmount)'
+        },
+        zoneAreaAvgSizeWest: {
+          type: Object,
+          computed: 'computeAvgZoneAreaTimeline(timeline_west.playerzoneArea, timeline_west.playerzoneAmount)'
         },
         zoneAreaAvgSizeNorth: {
           type: Object,
